--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,9 +1,7 @@
 html,
 body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  color: #e1e1e6;
+  background: #121214;
 }
 
 a {
@@ -12,5 +10,18 @@ a {
 }
 
 * {
+  padding: 0;
+  margin: 0;
   box-sizing: border-box;
+  font-family: Poppins, sans-serif;
+}
+::-webkit-scrollbar {
+  width: 10px;
+}
+::-webkit-scrollbar-thumb {
+  background: #29292e;
+  border-radius: 7px;
+}
+::-webkit-scrollbar-track {
+  background: #000000;
 }
