--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -2,11 +2,17 @@ html,
 body {
   color: #e1e1e6;
   background: #121214;
+  scroll-behavior: smooth;
 }
 
 a {
   color: inherit;
   text-decoration: none;
+  transition: color 180ms ease-in-out;
+  &:hover{
+    color:#325cf3;
+    cursor: pointer;
+  }
 }
 
 * {
